--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-facebook-page": "^1.0.1",
     "vue-image-lightbox": "^6.3.1",
     "vue-lazyload": "^1.3.3",
+    "vue-lodash": "^2.0.2",
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.15.0",
     "vue-spinner": "^1.0.3",
