--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^3.0.3",
     "vue-scrollto": "^2.15.0",
     "vue-spinner": "^1.0.3",
+    "vue-toastr-2": "0.0.10",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
